# tmz

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
.ast-grep/: sgconfig.yml
.ast-grep/rules/: rust-no-unwrap-expect.yml
.github/workflows/: release.yml
.pi/todos/: 647d8565-e722-4c16-8518-91e1b91a7b03.json
crates/tmz-api/: Cargo.toml
crates/tmz-api/src/: main.rs
crates/tmz-cli/: Cargo.toml
crates/tmz-cli/src/: main.rs
crates/tmz-core/: Cargo.toml
crates/tmz-core/examples/: generate_config.rs
crates/tmz-core/src/: cache.rs  config.rs  daemon.rs  error.rs  kitty.rs  lib.rs  paths.rs  schema.rs
crates/tmz-core/src/teams/: auth.rs  client.rs  mod.rs  models.rs  storage.rs
crates/tmz-mcp/: Cargo.toml
crates/tmz-mcp/src/: main.rs
crates/tmz-tui/: Cargo.toml
crates/tmz-tui/src/: app.rs  event.rs  main.rs  ui.rs
docs/: TUI.md
examples/: config.schema.json  config.toml
logo/: tmz_logo.ai
scripts/: new-cli.ps1  new-cli.sh  package.json  setup-auth.ps1  setup-auth.sh  teams-auth.mjs
scripts/lint/: rust-ai-guardrails.sh
