[package]
name = "tmz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared core library for the rust-workspace template"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
schemars.workspace = true
ext-core = { path = "/path/to/ext-crate" }
base64 = "0.22"
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
