[package]
name = "tmz-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for the rust-workspace template"

[lints]
workspace = true

[[bin]]
name = "tmz-mcp"
path = "src/main.rs"

[dependencies]
tmz-core.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
