[package]
name = "tmz-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TUI interface for the rust-workspace template"

[lints]
workspace = true

[[bin]]
name = "tmz-tui"
path = "src/main.rs"

[dependencies]
tmz-core.workspace = true
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
log.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
nucleo-matcher = "0.3"
unicode-width = "0.2"
